--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <script src="https://kit.fontawesome.com/8bf8669c61.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
